css/vendedor/gerenciar_pedidos.css
.gerenciar_pedidos_body_container {
  padding: 56px 48px 16px;
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.gerenciar_pedidos_body_holder {
  border-radius: 10px;
  padding: 32px;
}

.gerenciar_pedidos_navbar_principal {
  background-color: #fff;
  width: 100vw;
  height: 67px;
}

.gerenciar_pedidos_header_relatorio {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}

.gerenciar_pedidos_subtitulo_generico{
  width: 100%;
  display: flex;
  gap: 16px;
}

.base_icon{
  height: 32px;
}

.gerenciar_pedidos_linha_vertical{
  width: 8px;
  height: 48px;
  background-color: var(--carolina);
  border-radius: 10px;
}

.gerenciar_pedidos_subtitle_holder{
  display: flex;
  gap: 8px;
  align-items: center;
}

.gerenciar_pedidos_header_holder{
  width: 100%;
}

.gerenciar_pedidos_header_title {
  display: flex;
  justify-content: center;
  gap: 4px;
}

.gerenciar_pedidos_text_header {
  color: var(--sappire);
}

.gerenciar_pedidos_quadrado_container {
  width: 100%;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
  gap: 10%;
}

.gerenciar_pedidos_main_content {
  padding: 32px;
}

.gerenciar_pedidos_pesquisar_pedidos {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-items: center;
}

.gerenciar_pedidos_header_pedidos {
  width: 100%;
}

.gerenciar_pedidos_form_cliente {
  display: flex;
  flex-direction: column;
}

.gerenciar_pedidos_input_ano {
  display: flex;
  flex-direction: column;
}

.gerenciar_pedidos_input_status {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.gerenciar_pedidos_text_pedidos {
  font-size: 32px;
  text-align: center;
}

.gerenciar_pedidos_linha_sublinhado {
  margin-top: 16px;
  width: 100%;
  height: 4px;
  border: 0;
  background-color: var(--carolina);
}

.gerenciar_pedidos_forms_pesquisa_pedidos {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 16px;
  margin: 16px 0 0;
}

.gerenciar_pedidos_holder_botao {
  display: flex;
  justify-content: flex-end;
  gap: 16px;
}

.gerenciar_pedidos_inputs_esquerda {
  display: flex;
  gap: 8px;
}

.gerenciar_pedidos_select_status {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.gerenciar_pedidos_mes_select {
  display: flex;
  flex-direction: column;
  width: fit-content;
}

.gerenciar_pedidos_ano_select {
  display: flex;
  flex-direction: column;
  width: fit-content;
}

.gerenciar_pedidos_estatistica_holder {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 4px;
}

.gerenciar_pedidos_estatisticas {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.gerenciar_pedidos_header_estatisticas {
  width: 100%;
  grid-column: 1/4;
}

.gerenciar_pedidos_text_estatisticas {
  font-size: 32px;
  text-align: center;
}

.gerenciar_pedidos_linha_estatisticas {
  height: 2px;
  background-color: rgba(0, 0, 0, 0.3);
  border: 0;
}

.gerenciar_pedidos_card {
  background: var(--branco_gelo);
  padding: 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
}

.gerenciar_pedidos_titulo {
  color: #000;
  font-family: Jost;
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  text-align: center;
}

.gerenciar_pedidos_estatistica_descricao {
  color: #000;
  font-family: Jost;
  font-size: 16px;
  font-style: normal;
  font-weight: 300;
}

.gerenciar_pedidos_table{
  display: flex;
  flex-direction: column;
}

.gerenciar_pedidos_table_filtro{
  display: flex;
  width: fit-content;
  align-items: center;
  padding: 0 8px;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;

  & select{
    background-color: var(--carolina);
    border: 0;
    height: 32px;
  }

  & select:focus-visible{
    outline: solid 1px #e0e0e0;
  }
}

.gerenciar_pedidos_filtro_titulo{
  color: #fff;
}

.gerenciar_pedidos_table_holder{
  *{
    border-collapse: collapse;
    padding: 8px;
    text-align: left;
  }

  table, & thead{
    border: solid 1px var(--carolina);
    width: 100%;
  }

  col{
    border-left: solid 1px var(--carolina);
    border-right: solid 1px var(--carolina);
  }

  th{
    font-size: 1.5rem;
    font-weight: 400;
    color: var(--cinza);
  }

  td {
    height: 100%;
    color: var(--sappire);
    font-size: 1rem;
    font-weight: 500;
  }

  tr{
    background-color: var(--branco_gelo);
    min-height: 48px;
  }

  tbody > tr:nth-child(odd){
    background-color: var(--azul_leve);
  }

  /**Individual para cada tabela */
  .gerenciar_pedidos_table_col-1,
  .gerenciar_pedidos_table_col-4{
    width: 4%;
  }
  .gerenciar_pedidos_table_col-3,
  .gerenciar_pedidos_table_col-6{
    width: 8%;
  }

  .gerenciar_pedidos_table_col-2,
  .gerenciar_pedidos_table_col-5,
  .gerenciar_pedidos_table_col-7{
    width: 20%;
  }
}

@media (max-width:1024px) {
  .font_titulo{
    font-size: 1.5rem;
  }
  .gerenciar_pedidos_quadrado_container {
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr;
    gap: 32px;
  }

  .gerenciar_pedidos_body_container {
    padding: 24px 16px 16px;
    gap: 8px;
  }

  .gerenciar_pedidos_body_holder {
    padding: 8px;
  }

  .gerenciar_pedidos_main_content {
    padding: 8px;
  }

  .base_botao{
    min-width: 128px;
  }

  .gerenciar_pedidos_linha_sublinhado{
    display: none;
  }

  .gerenciar_pedidos_input_ano,
  .gerenciar_pedidos_input_mes{
    width: 100%;
  }

  .gerenciar_pedidos_mes_select,
  .gerenciar_pedidos_select_status,
  .gerenciar_pedidos_ano_select{
    width: 100%;
  }



  .gerenciar_pedidos_table_holder{
    *{
      padding: 4px;
    }

    th{
      font-size: 0.75rem;
    }

    td{
      height: 100%;
      -webkit-line-clamp: 1;
      overflow: hidden;
      text-overflow: ellipsis;
      font-size: 0.625rem;
    }
  }
}

